[tool.poetry]
name = "spark-coverage-example"
version = "0.1.0"
description = "An example of running coverage on Pyspark"
authors = ["Navin Vembar <navin.vembar@gmail.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.1"
coverage = "^5.5"
pytest = "^6.2.3"
findspark = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
